Localization & cleanup Replaced the most hardcoded messages with a call to MessageProvider#provide and added all of them to en.properties. A file for German will follow soon. Cleanup: Removed most of the CompletableFuture#get calls with #whenComple(async) and replaced the parameter of the CF returned in Punishment via #punish and #cancel with a CF<Punishment>. Bumped version to 1.0.0-beta.2 and set source/target compatibility to 17.